Angular Project Set-up for Electron Wrapper
Using an angular project to create a desktop electron application.
The set-up is necessary, I do not understand why the default
application builder will not work and why es-build is used
for building the application, I will just
follow what works in the tutorial - just trying this out now.

Not sure how changing the base of the web page will
affect the overall project or electron, but this is necessary
and works just as the tutorial worked.

Youtube tutorial by Joshua Morony.

--- a/apps/renderer/project.json
+++ b/apps/renderer/project.json
@@ -7,12 +7,12 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:application",
+      "executor": "@angular-devkit/build-angular:browser-esbuild",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/renderer",
         "index": "apps/renderer/src/index.html",
-        "browser": "apps/renderer/src/main.ts",
+        "main": "apps/renderer/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/renderer/tsconfig.app.json",
         "assets": ["apps/renderer/src/favicon.ico", "apps/renderer/src/assets"],
@@ -53,7 +53,10 @@
           "buildTarget": "renderer:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/renderer/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
