--- a/apps/renderer/project.json
+++ b/apps/renderer/project.json
@@ -16,8 +16,13 @@
         "polyfills": ["zone.js"],
         "tsConfig": "apps/renderer/tsconfig.app.json",
         "assets": ["apps/renderer/src/favicon.ico", "apps/renderer/src/assets"],
-        "styles": ["apps/renderer/src/styles.css"],
-        "scripts": []
+        "styles": [
+          "apps/renderer/src/styles.css",
+          "node_modules/bootstrap/dist/css/bootstrap.css"
+        ],
+        "scripts": [
+          "node_modules/bootstrap/dist/js/bootstrap.js"
+        ]
       },
       "configurations": {
         "production": {
